# ziptool

./: .gitignore  README.md  api_testing.py  component_testing.py  config.py  multi_state_zips.py  pipeline.py  pyproject.toml  requirements.txt  test.py  testing.py  testing_with_dfs.py  wave_generator.py  weird_bug_testing.py
archive/: experiments.py  geo_experiments.py
docs/: conf.py  index.md  index.rst  why.rst
docs/_build/doctrees/: environment.pickle  index.doctree  why.doctree
docs/_build/doctrees/examples/: examples.doctree
docs/_build/doctrees/getting_started/: data_by_zip.doctree  getting_started.doctree  installation.doctree  quickstart.doctree
docs/_build/doctrees/modules/: fetch_data.doctree  geo_conversion.doctree  interface.doctree  modules.doctree  query_by_zip.doctree  utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  why.html
docs/examples/: examples.rst  usa_00028.xml
docs/examples/example1/: config.py  example1.py  example1.rst
docs/examples/example2/: configuration.py  example2.py  example2.rst
docs/getting_started/: getting_started.rst
docs/modules/: fetch_data.rst  geo_conversion.rst  query_by_zip.rst  utils.rst
docs/usage/: installation.rst
downloads/: more_testing.py
junk/: pipeline.py
old_tests/: testing_with_dfs.py  weird_bug_testing.py
src/ziptool/: __init__.py  data_by_zip.py  fetch_data.py  geo_conversion.py  interface.py  load.py  pipeline.py  query_by_zip.py  utils.py
tests/: test_load.py  test_pipeline.py  test_utils.py
(+42 files in other folders)
